# vehicle_fleet_management

./: CMakeLists.txt  requirements_checklist
src/: main.c
src/menu/: menu.c  menu.h
src/utils/: colors.h  utils.c  utils.h
src/vehicles/: vehicles.c  vehicles.h
